<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FluxRss</string>
    <string name="hello_world">Bonsoir</string>
    <string name="liste">ListView</string>


    <string name="headerTitle">Démonstration du List View</string>
    <string name="labelConnect">Récuperer les podCasts</string>
    <string name="labelLoading">Chargement</string>
    <string name="footerTitle">Un pied de page</string>
    <string name="descriptionIconRSS">Icone RSS</string>
    <string name="bodyText">PodCast</string>
    <string name="date">2013-2014</string>
    <string name="articleTrouve">%1$d articles</string>
    <string name="auteursTrouves">%1$d auteurs</string>
    <string name="defaultLabelValue">Veuillez récupérer les itemsRss</string>

    <string name="viewPodcasts">Voir les Podcasts</string>
    <string name="addPodcasts">Ajouter une source</string>
    <string name="deletePodcasts">Supprimer une source</string>
    <string name="options">Options</string>


    <string name="action_settings">Settings</string>
   <!-- <string name="action_search">Settings</string>-->

    <string name="toolbar_prompt">Choisir une action</string>
    <string-array name="toolbar_arrays">
        <item>@string/viewPodcasts</item>
        <item>@string/addPodcasts</item>
        <item>@string/deletePodcasts</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

<!--Refonte -->
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>

    <string name="settings">Paramètres</string>
    <string name="addFlux">Ajouter un Flux</string>
    <string name="myflux">Mes Flux</string>
    <string name="top_cat">A la une</string>
    <string name="eco_cat">Economie</string>
    <string name="sport_cat">Sport</string>
    <string name="inter_cat">International</string>
    <string name="techno_cat">Technologies</string>
    <string name="cult_cat">Culture</string>
    <string name="health_cat">Santé</string>


    <string name="pref_sync">Prf sync</string>
    <string name="pref_sync_summ">Prf sync Summ</string>

</resources>
