<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_top"
                android:icon="@drawable/listing"
                android:title="@string/top_cat"
        />
        <item
                android:id="@+id/nav_eco"
                android:icon="@drawable/listing"
                android:title="@string/eco_cat"
        />
        <item
                android:id="@+id/nav_sport"
                android:icon="@drawable/listing"
                android:title="@string/sport_cat"
        />
        <item
                android:id="@+id/nav_inter"
                android:icon="@drawable/listing"
                android:title="@string/inter_cat"
        />
        <item
                android:id="@+id/nav_tech"
                android:icon="@drawable/listing"
                android:title="@string/techno_cat"
        />
        <item
                android:id="@+id/nav_cult"
                android:icon="@drawable/listing"
                android:title="@string/cult_cat"
        />
        <item
                android:id="@+id/nav_health"
                android:icon="@drawable/listing"
                android:title="@string/health_cat"
        />

        <item android:title="@string/settings">
            <menu>
                <item
                        android:id="@+id/nav_settings"
                        android:icon="@drawable/cog2"
                        android:title="@string/settings"/>
                />
                <item
                        android:id="@+id/nav_ajout"
                        android:icon="@drawable/plus25"
                        android:title="@string/addFlux"/>
            </menu>
        </item>
    </group>

</menu>